clean up readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,12 +19,12 @@ knitr::opts_chunk$set(
 Over the years, I've written a lot of one-off functions for formatting numbers
 in RMarkdown documents. This packages collects them in a single location.
 
-## Installation
+## Installation 📚
 
 You can install printy from github with:
 
 ```{r gh-installation, eval = FALSE}
-# install.packages("devtools")
+# install.packages("remotes")
 remotes::install_github("tjmahr/printy")
 ```
 
@@ -78,7 +78,7 @@ test_cor %>%
   knitr::kable(align = "lrrrr")
 ```
 
-### *p*-values
+### *p*-values 🎣
 
 `fmt_p_value()` formats *p*-values with *n* digits of precision, with no leading
 zero, and with very small values being printed with a `<` sign.
@@ -158,7 +158,39 @@ fmt_effect_md(model, "woolB", terms = "bep", digits = 6)
 
 `r fmt_effect_md(model, "woolB", terms = "bep", digits = 6)`
 
-## Formatting tables from lme4 models
+
+## Skeletons 🦴
+
+I use `fmt_` for formatting functions. The other convention in the package is
+`skel_` to plug values into a formatting skeleton. 
+
+`skel_conf_interval()` creates a confidence interval from two numbers.
+
+
+```{r}
+skel_conf_interval(c(1, 2))
+```
+
+
+`skel_conf_interval_v()` is the vectorized version. It is suitable for working
+on columns of numbers.
+
+
+```{r}
+model <- lm(breaks ~ wool * tension, warpbreaks) 
+
+ci_starts <- confint(model)[, 1] %>% 
+  fmt_fix_digits(2) %>% 
+  fmt_minus_sign()
+
+ci_ends <- confint(model)[, 2] %>% 
+  fmt_fix_digits(2) %>% 
+  fmt_minus_sign()
+
+skel_conf_interval_v(ci_starts, ci_ends)
+```
+
+## Formatting tables from lme4 models 🖇
 
 One thing I've had to do a lot is summarize mixed effects models fit with lme4.
 This package provides `pretty_lme4_ranefs()` which creates a dataframe random
@@ -197,36 +229,5 @@ knitr::kable(
   pretty_lme4_ranefs(model), 
   align = c("l", "l", "r", "r", "r", "r", "r", "r", "r")
 )
-```
-
-## Skeletons 🦴
-
-I use `fmt_` for formatting functions. The other convention in the package is
-`skel_` to plug values into a formatting skeleton. 
-
-`skel_conf_interval()` creates a confidence interval from two numbers.
-
-
-```{r}
-skel_conf_interval(c(1, 2))
-```
-
-
-`skel_conf_interval_v()` is the vectorized version. It is suitable for working
-on columns of numbers.
-
-
-```{r}
-model <- lm(breaks ~ wool * tension, warpbreaks) 
-
-ci_starts <- confint(model)[, 1] %>% 
-  fmt_fix_digits(2) %>% 
-  fmt_minus_sign()
-
-ci_ends <- confint(model)[, 2] %>% 
-  fmt_fix_digits(2) %>% 
-  fmt_minus_sign()
-
-skel_conf_interval_v(ci_starts, ci_ends)
 ```
 
